--- a/task/src/main/webapp/WEB-INF/views/templates/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu.html
@@ -44,7 +44,7 @@
     <!-- -->
     <ul data-th-fragment="core-menu-admin">
         <li>
-            <a data-th-href="@{/employee/}"	data-th-text="#{titleform.emploee}"></a>
+            <a data-th-href="@{/employee/}"	data-th-text="#{titleform.employee}"></a>
         </li>
         <li data-sec-authorize="hasAuthority('user:read')">
             <a data-th-href="@{/users/}" data-th-text="#{titleform.users}"></a>
