--- a/task/src/main/resources/views/employee/employee-fragment.html
+++ b/task/src/main/resources/views/employee/employee-fragment.html
@@ -68,37 +68,8 @@
 
             <div data-th-replace="~{templates/input-custom :: input-submit-form}"></div>
 
-            <script type="text/javascript" >
-                (() => {
-                    setStartDatalist().then(r =>{
-                        console.log(r)
-                    } );
-                    datalistDepartment();
-                })();
+            <script type="text/javascript" data-th-src="@{/js/employee-fragment.js}" ></script>
 
-                async function setStartDatalist () {
-                    let selectedCompanyId = $('select#idEnterprise option:selected').val();
-                    renderDatalistDepartments(await datalistFragmentHTML(selectedCompanyId));
-                }
-
-                function datalistDepartment() {
-
-                    $('select#idEnterprise').change(async function(){
-                        let enterpriseId = $(this).val();
-                        renderDatalistDepartments(await datalistFragmentHTML(enterpriseId));
-                    }).click(function (){
-                        $('input#department[name=department]').val('');
-                    });
-                }
-
-                function renderDatalistDepartments(dataList) {
-                    $('datalist#departmentsList').replaceWith(dataList);
-                }
-
-                async function datalistFragmentHTML (companyId) {
-                    return $.post('/informer/company/datalist', {companyId: companyId});
-                }
-            </script>
         </fieldset>
     </form>
 
