--- a/task/src/main/resources/views/user/app-user.html
+++ b/task/src/main/resources/views/user/app-user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ua">
-<head data-th-replace="~{templates/head :: head(#{titleform.users})}">
-    <title data-th-text=""></title>
+<head data-th-replace="~{templates/head :: head(~{::title})}">
+    <title data-th-text="#{titleform.users}"></title>
 </head>
 
 <body>
