--- a/task/src/main/resources/views/login.html
+++ b/task/src/main/resources/views/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-	<head data-th-replace="~{templates/head :: head(#{titleform.login})}">
-		<title>login</title>
+	<head data-th-replace="~{templates/head :: head(~{ :: title})}">
+		<title >login</title>
 	</head>
 	
 	<body>
