--- a/task/src/main/resources/views/templates/head.html
+++ b/task/src/main/resources/views/templates/head.html
@@ -9,5 +9,5 @@
 		<link data-th-href="@{/resources/css/app.css}" rel="stylesheet" />
 		<script type="application/javascript" data-th-src="@{/webjars/jquery/jquery.js}"></script>
 		<script type="application/javascript" data-th-src="@{/webjars/foundation/dist/js/foundation.js}"></script>
-		<title data-th-text="${title}">Layout Generic Title</title>
+		<title data-th-replace="${title}">Layout Generic Title</title>
 	</head>
