--- a/task/src/main/resources/views/employee/employee.html
+++ b/task/src/main/resources/views/employee/employee.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-	<head data-th-replace="~{templates/head :: head(#{titleform.employee})}">
-		<title>employee</title>
+	<head data-th-replace="~{templates/head :: head(~{::title})}">
+		<title data-th-text="#{titleform.employee}" >employee</title>
 	</head>
 	
 <body>
