--- a/task/src/main/resources/views/room/room.html
+++ b/task/src/main/resources/views/room/room.html
@@ -18,6 +18,6 @@
     </div>
 
     <script data-th-replace="~{templates/core-script :: core-script}"></script>
-    <script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
+    <script type="text/javascript" data-th-src="@{/js/menu.js}"></script>
 </body>
 </html>
