--- a/task/src/main/resources/views/department/department.html
+++ b/task/src/main/resources/views/department/department.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<script data-th-replace="~{templates/core-script :: core-script}"></script>
-		<script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
+		<script type="text/javascript" data-th-src="@{/js/menu.js}"></script>
 	
 	</body>
 </html>
