add disable employee

--- a/task/src/main/resources/views/employee/employee-fragment.html
+++ b/task/src/main/resources/views/employee/employee-fragment.html
@@ -121,6 +121,10 @@
             </div>
         </div>
 
+        <div class="row expanded">
+            <div data-th-insert="~{templates/input-custom :: input-checkbox-12(#{inputlabel.isdisable}, 'disable')}"></div>
+        </div>
+
 
         <div data-th-replace="~{templates/input-custom :: input-submit-form}"></div>
 
